--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,16 +1,17 @@
+{% from "macros.html" import nav_link with context %}
 <!DOCTYPE html>
 <html lang='en'>
 <head>
+    {#    need jquery, bootstrap js, and bootstrap css for everything to work#}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" media="screen"
-          integrity="sha256-MfvZlkHCEqatNoGiOXveE8FIwMzZg4W85qfrfIFBfYc= sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ=="
-          crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"
-          integrity="sha256-k2/8zcNbxVIh5mnQ52A0r3a6jAgMGxFJFE2707UxGCk= sha512-ZV9KawG2Legkwp3nAlxLIVFudTauWuBpC10uEafMHYL0Sarrz5A7G79kXh5+5+woxQ5HM559XX2UZjMJ36Wplg=="
-          crossorigin="anonymous">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="{{
+  url_for('static', filename='js/jquery.js') }}">\x3C/script>')</script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"
-            integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
             crossorigin="anonymous"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" media="screen"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -18,48 +19,30 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mynavbar">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+
+            {#            different nav bar brand depending on screen size#}
             <div class="visible-xs">
-                <a class="navbar-brand" title="DJ Theorem"
-                   href="#"><img style="max-width:47px; margin-top: -18px;"
-                                 src="{{ url_for('static', filename='images/napoleon.gif') }}"></a>
+                <a class="navbar-brand" href="#"><img style="max-width:47px; margin-top: -18px;"
+                                                      src="{{ url_for('static', filename='images/napoleon.gif') }}"></a>
             </div>
             <div class="visible-md visible-sm visible-lg">
                 <a class="navbar-brand" title="DJ Theorem" href="#">DJ Theorem</a>
             </div>
         </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class='nav navbar-nav'>
-                <li {% if request.url_rule.endpoint == 'news' %} class="active" {% endif %}>
-                    <a href="{{ url_for('news') }}">News</a>
-                </li>
+        <div class="collapse navbar-collapse" id="mynavbar">
+            <ul class="nav navbar-nav">
+                {{ nav_link('news', 'News') }}
+                {{ nav_link('about', 'About') }}
+                {{ nav_link('events', 'Events') }}
+                {{ nav_link('music', 'Music') }}
+                {{ nav_link('contact', 'Contact') }}
             </ul>
-            <ul class='nav navbar-nav'>
-                <li {% if request.url_rule.endpoint == 'about' %} class="active" {% endif %}>
-                    <a href="{{ url_for('about') }}">About</a>
-                </li>
-            </ul>
-            <ul class='nav navbar-nav'>
-                <li {% if request.url_rule.endpoint == 'events' %} class="active" {% endif %}>
-                    <a href="{{ url_for('events') }}">Events</a>
-                </li>
-            </ul>
-            <ul class='nav navbar-nav'>
-                <li {% if request.url_rule.endpoint == 'music' %} class="active" {% endif %}>
-                    <a href="{{ url_for('music') }}">Music</a>
-                </li>
-            </ul>
-            <ul class='nav navbar-nav'>
-                <li {% if request.url_rule.endpoint == 'contact' %} class="active" {% endif %}>
-                    <a href="{{ url_for('contact') }}">Contact</a>
-                </li>
-            </ul>
-
-            <ul class='nav navbar-nav navbar-right visible-md visible-sm visible-lg'>
+            <ul class='nav navbar-nav navbar-right'>
                 <li><a href='http://www.twitter.com/dj_theorem'>
                     <i class='fa fa-twitter'></i></a></li>
                 <li><a href='http://www.soundcloud.com/djtheorem'>
@@ -70,7 +53,9 @@
 </nav>
 
 
-<div class="container  visible-md visible-sm visible-lg">
+{#conditionals on text display with image depending on screen size#}
+
+<div class="container visible-md visible-sm visible-lg">
     <div class="row">
         <div class="col-md-5 col-sm-6"><br> <br> <br>{% include page_to_insert %}
         </div>
